[tool.poetry]
name = "migration_dayone"
version = "0.1.0"
description = ""
authors = ["Arnaud Limbourg <arnaud@limbourg.com>", "Edoardo Baldi <edoardob90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytk = "^0.0.2"
pytz = "^2021.3"
python-dateutil = "^2.8.2"
click = "^8.0.4"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
